# cplt

./: .gitignore  .mise.toml  AGENTS.md  Cargo.toml  README.md  SECURITY.md  blocked-domains.txt  blocked.txt  cliff.toml  mise.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  ci.yml  cplt-release.yaml  cplt.yaml  release.yaml  release.yml
hack/: cplt-debug.sh  pre-commit
src/: config.rs  discover.rs  lib.rs  main.rs  proxy.rs  sandbox.rs  sandbox_env.rs  sandbox_exec.rs  sandbox_landlock.rs  sandbox_policy.rs  sandbox_profile.rs  scratch.rs  update.rs
tests/: e2e.rs  e2e_projects.rs  integration.rs  integration_linux.rs  unit_tests.rs
