[package]
name = "cplt"
version = "0.0.0"
edition = "2024"
description = "macOS Seatbelt sandbox wrapper for GitHub Copilot CLI"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "1.1"
toml_edit = "0.22"

[profile.release]
strip = true
lto = true

[dev-dependencies]
serde_json = "1"
