[package]
name = "cplt"
version = "0.0.0"
edition = "2024"
description = "Sandbox wrapper for GitHub Copilot CLI (macOS Seatbelt, Linux Landlock)"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
toml_edit = "0.22"

# Linux-only: Landlock LSM crate (only compiled and linked on Linux).
# Run `cargo update` with network access to populate the lockfile.
[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"

[profile.release]
strip = true
lto = true

[dev-dependencies]
tempfile = "3"
